--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <header class ="d-flex flex-row justify-content-between p-4 mb-0">
     <span class="landingpage-header-logo p-2">
-        HOTELFRENdZ
+        HOTELFRENZ
     </span>
     <nav class="">
       <ul class="nav justify-content-end">
