--- a/index.html
+++ b/index.html
@@ -292,10 +292,7 @@
       <p>What customers say about us, and why you should choose us...</p>
       <div class="offset-lg-1" >
       <p class="feedbacks br">
-        At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis 
-        praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati 
-        cupiditate non provident, similique sunt in culpa qui officia 
-        deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio.
+        Beautiful Hotel, Great amenities. Must
       </p>
       <div class="flex-row justify-content-center p-3">
        <i class="fa fa-star" aria-hidden="true"></i></icon>
