--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
       <p>What customers say about us, and why you should choose us...</p>
       <div class="offset-lg-1" >
       <p class="feedbacks br">
-        Beautiful Hotel, Great amenities. Must
+        Beautiful Hotel, Great amenities. Must Visit! Enjoyed my stay here.
       </p>
       <div class="flex-row justify-content-center p-3">
        <i class="fa fa-star" aria-hidden="true"></i></icon>
