--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>FrenzHotel</title>
     <meta name="Hotel Frenz Landing page " content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Hotel Franz is situated in the core of the memorable focus of Lagos in a very trademark, very and energetic territory inside short walk separation to all locales and is encircled by the exceptional excellence of chapels, structures, shops and landmarks. Franz Hotel is important for an affectionately reestablished 1800 castle.">
+    <meta name="description" content="Hotel Franz is situated in the core of the memorable focus of Lagos in a very trademark, very and energetic territory inside short walk separation to all locales ">
     <meta name="robots" content="noindex,nofollow"> 
     <meta name="keywords" content="Hotel, Holiday, Vacation, Honeymoon, Rooms, Suite">
     <meta name="author" content="Hunain Adhikari">
